--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "SimonBoddy",
 	"displayName": "QueryFirst",
 	"description": "Typed raw sql for everybody.",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.53.0"
 	},
@@ -11,14 +11,15 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:queryfirst.helloWorld"
+		"onLanguage:sql",
+		"onCommand:queryfirst.watch"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "queryfirst.helloWorld",
-				"title": "Hello World"
+				"command": "queryfirst.watch",
+				"title": "QueryFirst:Watch Workspace"
 			}
 		]
 	},
