--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publisher": "SimonBoddy",
 	"displayName": "QueryFirst",
 	"description": "Typed raw sql for everybody.",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"engines": {
 		"vscode": "^1.53.0"
 	},
@@ -43,5 +43,9 @@
 		"mocha": "^8.1.3",
 		"typescript": "^4.0.2",
 		"vscode-test": "^1.4.0"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "git://github.com/username/repository.git"
+	  }
 }
